<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ScheduleDetails">

    <LinearLayout
        android:id="@+id/textlayout"
        android:layout_width="409dp"
        android:layout_height="669dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/EventID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20sp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/idresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linearLayout1"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/EventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title1"
                android:textSize="20sp"
                android:paddingRight="10dp"/>

            <EditText
                android:id="@+id/nameresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="TextView"
                />
        </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/EventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date1"
                android:textSize="20sp"
                android:paddingRight="10dp"/>

            <EditText
                android:id="@+id/DateResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"/>
        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/enddisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp"
                android:paddingRight="10dp"/>

            <Button
                android:id="@+id/endresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/timedisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp"
                android:paddingRight="10dp"/>

            <Button
                android:id="@+id/timeresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/buildingdisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building"
                android:textSize="20sp"
                android:paddingRight="10dp"/>

            <EditText
                android:id="@+id/buildingresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"/>
        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/roomdisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_number1"
                android:textSize="20sp"
                android:paddingRight="10dp"/>

            <EditText
                android:id="@+id/roomresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"/>
        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/typedisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_type"
                android:paddingRight="10dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/typeresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"/>
        </LinearLayout>

         <LinearLayout
             android:id="@+id/colorbackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             android:layout_margin="5dp"
             android:background="@color/white">

            <TextView
                android:id="@+id/ColorDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_preference"
                android:paddingRight="10dp"
                android:textSize="20sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/colorResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Color"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp">

            <Switch
                android:textAlignment="center"
                android:id="@+id/RepeatEventSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/repeating_event"
                app:layout_constraintTop_toBottomOf="@id/EventRoom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/Weeklayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/sunbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/monbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tuebutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/wenbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wen"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Thurbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thur"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Fributton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/satbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="407dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textlayout">

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/RemoveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove"
            android:layout_margin="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>