<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocationsActivity"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/header"
        android:text="@string/location_details"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:elevation="4dp"
        android:background="@drawable/activity_background"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/loading_location_name"
                    android:textSize="40sp"
                    android:gravity="center"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/location_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/loading_location_address"
                    android:textSize="24sp"
                    android:gravity="center"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_coord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/location_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/loading_location_coord"
                    android:textSize="20sp"
                    android:gravity="center"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/location_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/location_coord"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/test_image"
                    android:adjustViewBounds="true"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/location_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/loading_location_information"
                    android:textSize="20sp"
                    android:gravity="center"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigate_button"
            android:layout_width="170dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/scroll_view"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/navigate_to_location"
            android:textSize="18sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite_button"
            android:layout_width="170dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/scroll_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_to_favorites"
            android:textSize="18sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
